# docs/swagger.json
@@ -925,6 +925,15 @@
                         "required": true
                     },
                     {
+                        "description": "Development Card ID",
+                        "name": "developmentCardID",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.PlayKnightCard"
+                        }
+                    },
+                    {
                         "description": "Terrain ID",
                         "name": "terrainID",
                         "in": "body",
@@ -989,6 +998,15 @@
                         "required": true
                     },
                     {
+                        "description": "Development Card ID",
+                        "name": "developmentCardID",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.PlayMonopolyCard"
+                        }
+                    },
+                    {
                         "description": "Resource Card Type",
                         "name": "resourceCardType",
                         "in": "body",
@@ -1045,6 +1063,15 @@
                         "required": true
                     },
                     {
+                        "description": "Development Card ID",
+                        "name": "developmentCardID",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.PlayRoadBuildingCard"
+                        }
+                    },
+                    {
                         "description": "List of Path ID",
                         "name": "pathIDs",
                         "in": "body",
@@ -1082,6 +1109,62 @@
                 }
             }
         },
+        "/catan/games/{id}/play-victory-point-card": {
+            "post": {
+                "description": "Play victory point development card from your stack at any phase of started state",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Play victory point card",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Game ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Development Card ID",
+                        "name": "developmentCardID",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.PlayVictoryPointCard"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "nil"
+                        }
+                    },
+                    "400": {
+                        "description": "the request contains invalid parameters",
+                        "schema": {
+                            "$ref": "#/definitions/iris.Problem"
+                        }
+                    },
+                    "404": {
+                        "description": "development card not found",
+                        "schema": {
+                            "$ref": "#/definitions/iris.Problem"
+                        }
+                    },
+                    "422": {
+                        "description": "selected player must have construction next to robber",
+                        "schema": {
+                            "$ref": "#/definitions/iris.Problem"
+                        }
+                    }
+                }
+            }
+        },
         "/catan/games/{id}/play-year-of-plenty-card": {
             "post": {
                 "description": "Play year of plenty development card from your stack at any phase of started state",
@@ -1099,6 +1182,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Development Card ID",
+                        "name": "developmentCardID",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.PlayYearOfPlentyCard"
+                        }
                     },
                     {
                         "description": "List of Resource Card Type",
@@ -1570,6 +1662,9 @@
         "requests.MaritimeTrade": {
             "type": "object",
             "properties": {
+                "demandingResourceCardType": {
+                    "type": "string"
+                },
                 "resourceCardType": {
                     "type": "string"
                 }
@@ -1592,9 +1687,13 @@
         "requests.PlayKnightCard": {
             "type": "object",
             "required": [
+                "developmentCardID",
                 "terrainID"
             ],
             "properties": {
+                "developmentCardID": {
+                    "type": "string"
+                },
                 "playerID": {
                     "type": "string"
                 },
@@ -1605,8 +1704,14 @@
         },
         "requests.PlayMonopolyCard": {
             "type": "object",
+            "required": [
+                "developmentCardID"
+            ],
             "properties": {
-                "resourceCardType": {
+                "demandingResourceCardType": {
+                    "type": "string"
+                },
+                "developmentCardID": {
                     "type": "string"
                 }
             }
@@ -1614,9 +1719,13 @@
         "requests.PlayRoadBuildingCard": {
             "type": "object",
             "required": [
+                "developmentCardID",
                 "pathIDs"
             ],
             "properties": {
+                "developmentCardID": {
+                    "type": "string"
+                },
                 "pathIDs": {
                     "type": "array",
                     "maxItems": 2,
@@ -1628,19 +1737,34 @@
                 }
             }
         },
+        "requests.PlayVictoryPointCard": {
+            "type": "object",
+            "required": [
+                "developmentCardID"
+            ],
+            "properties": {
+                "developmentCardID": {
+                    "type": "string"
+                }
+            }
+        },
         "requests.PlayYearOfPlentyCard": {
             "type": "object",
             "required": [
-                "resourceCardTypes"
+                "demandingResourceCardTypes",
+                "developmentCardID"
             ],
             "properties": {
-                "resourceCardTypes": {
+                "demandingResourceCardTypes": {
                     "type": "array",
                     "maxItems": 2,
                     "minItems": 1,
                     "items": {
                         "type": "string"
                     }
+                },
+                "developmentCardID": {
+                    "type": "string"
                 }
             }
         },
@@ -1905,16 +2029,7 @@
         "responses.Message": {
             "type": "object",
             "properties": {
-                "Detail": {
-                    "type": "string"
-                },
-                "ID": {
-                    "type": "string"
-                },
-                "RoomID": {
-                    "type": "string"
-                },
-                "UserID": {
+                "userID": {
                     "type": "string"
                 }
             }
