# presentation/v1/catan/requests/maritime_trade.go
@@ -1,5 +1,6 @@
 package requests
 
 type MaritimeTrade struct {
-	ResourceCardType string `json:"resourceCardType"`
+	ResourceCardType          string `json:"resourceCardType"`
+	DemandingResourceCardType string `json:"demandingResourceCardType"`
 }
