# presentation/v1/catan/requests/play_monopoly_card.go
@@ -1,5 +1,6 @@
 package requests
 
 type PlayMonopolyCard struct {
-	ResourceCardType string `json:"resourceCardType"`
+	DevelopmentCardID         string `json:"developmentCardID" validate:"required,objectid"`
+	DemandingResourceCardType string `json:"demandingResourceCardType"`
 }
