# presentation/v1/catan/requests/play_road_building_card.go
@@ -1,5 +1,6 @@
 package requests
 
 type PlayRoadBuildingCard struct {
-	PathIDs []string `json:"pathIDs" validate:"required,min=1,max=2,unique"`
+	DevelopmentCardID string   `json:"developmentCardID" validate:"required,objectid"`
+	PathIDs           []string `json:"pathIDs" validate:"required,min=1,max=2,unique"`
 }
