# presentation/v1/catan/requests/play_victory_point_card.go
@@ -1,0 +1,5 @@
+package requests
+
+type PlayVictoryPointCard struct {
+	DevelopmentCardID string `json:"developmentCardID" validate:"required,objectid"`
+}
